Background barely visible image is fixed

--- a/css/generic/graphics.css
+++ b/css/generic/graphics.css
@@ -9,7 +9,7 @@ body {
 body:after {
     content: "";
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     background-image: url(/images/rules-monochromatic.png);
@@ -18,7 +18,7 @@ body:after {
     background-size: cover;
     width: 100%;
     height: 100%;
-    opacity: 0.2;
+    opacity: 0.15;
     z-index: -1;
 }
 
